--- a/catalog.html
+++ b/catalog.html
@@ -84,6 +84,136 @@
             </div>
         </header>
         <main>
+            <div class="filter">
+                <div class="filter_wrap">
+                    <div class="filter_top">
+                        <a href="#" class="filter_close">
+                            Фильтр
+                            <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0)">
+                                <path d="M17.1253 14.5231H15.1929C14.8787 13.4774 13.918 12.709 12.7715 12.709C11.625 12.709 10.665 13.4774 10.3501 14.5231H1.16129C0.760743 14.5231 0.435669 14.8482 0.435669 15.2487C0.435669 15.6493 0.760743 15.9743 1.16129 15.9743H10.35C10.6642 17.02 11.625 17.7884 12.7715 17.7884C13.9179 17.7884 14.878 17.02 15.1929 15.9743H17.1253C17.5265 15.9743 17.8509 15.6493 17.8509 15.2487C17.8509 14.8482 17.5266 14.5231 17.1253 14.5231ZM12.7715 16.3372C12.1714 16.3372 11.683 15.8488 11.683 15.2487C11.683 14.6486 12.1714 14.1603 12.7715 14.1603C13.3716 14.1603 13.8599 14.6486 13.8599 15.2487C13.8599 15.8488 13.3716 16.3372 12.7715 16.3372Z" fill="black"/>
+                                <path d="M17.1253 2.91296H15.1929C14.878 1.86733 13.918 1.09888 12.7715 1.09888C11.625 1.09888 10.665 1.86733 10.35 2.91296H1.16129C0.760743 2.91296 0.435669 3.23803 0.435669 3.63858C0.435669 4.03913 0.760743 4.36421 1.16129 4.36421H10.35C10.665 5.40987 11.625 6.17832 12.7715 6.17832C13.918 6.17832 14.878 5.40987 15.1929 4.36424H17.1253C17.5266 4.36424 17.8509 4.03917 17.8509 3.63862C17.8509 3.23806 17.5266 2.91296 17.1253 2.91296ZM12.7715 4.72704C12.1714 4.72704 11.683 4.23869 11.683 3.63858C11.683 3.03847 12.1714 2.55013 12.7715 2.55013C13.3716 2.55013 13.86 3.03847 13.86 3.63858C13.86 4.23869 13.3716 4.72704 12.7715 4.72704Z" fill="black"/>
+                                <path d="M17.1253 8.71813H7.93658C7.62164 7.6725 6.66163 6.90405 5.51514 6.90405C4.36866 6.90405 3.40861 7.6725 3.09371 8.71813H1.16129C0.760743 8.71813 0.435669 9.04321 0.435669 9.44376C0.435669 9.84431 0.760743 10.1694 1.16129 10.1694H3.09367C3.40861 11.215 4.36863 11.9835 5.51511 11.9835C6.66159 11.9835 7.62164 11.215 7.93655 10.1694H17.1253C17.5265 10.1694 17.8509 9.84431 17.8509 9.44376C17.8509 9.04321 17.5266 8.71813 17.1253 8.71813ZM5.51511 10.5322C4.915 10.5322 4.42666 10.0439 4.42666 9.44376C4.42666 8.84365 4.915 8.3553 5.51511 8.3553C6.11522 8.3553 6.60356 8.84365 6.60356 9.44376C6.60356 10.0439 6.11522 10.5322 5.51511 10.5322Z" fill="black"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0">
+                                <rect width="17.4153" height="17.4153" fill="white" transform="translate(0.435608 0.735962)"/>
+                                </clipPath>
+                                </defs>
+                            </svg>                                
+                        </a>
+                        <a href="#" class="filter_close">
+                            <img src="img/catalog/close.svg" alt="close">                              
+                        </a>
+                    </div>
+                    <div class="filter_acc accordeon">
+                        <div class="acc_box">
+                            <div class="acc-head">
+                                <p>Размер</p>
+                                <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7.49996 8.77528C7.23113 8.77528 6.96233 8.67263 6.75737 8.46777L0.307712 2.01804C-0.102571 1.60776 -0.102571 0.942558 0.307712 0.532441C0.717829 0.122324 1.3829 0.122324 1.79321 0.532441L7.49996 6.23952L13.2067 0.53264C13.617 0.122524 14.282 0.122524 14.6921 0.53264C15.1026 0.942757 15.1026 1.60796 14.6921 2.01824L8.24254 8.46797C8.03749 8.67286 7.76869 8.77528 7.49996 8.77528Z" fill="black"/>
+                                </svg>                                
+                            </div>
+                            <div class="acc-body">
+                                <div class="size_wrap">
+                                    <span class="size_item_2">S</span>
+                                    <span class="size_item_2">M</span>
+                                    <span class="size_item_2">L</span>
+                                    <span class="size_item_2">XL</span>
+                                    <span class="size_item_2">2XL</span>
+                                    <span class="size_item_2">3XL</span>
+                                    <span class="size_item_2">4XL</span>
+                                    <span class="size_item_2">5XL</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="acc_box">
+                            <div class="acc-head">
+                                <p>Цвет</p>
+                                <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7.49996 8.77528C7.23113 8.77528 6.96233 8.67263 6.75737 8.46777L0.307712 2.01804C-0.102571 1.60776 -0.102571 0.942558 0.307712 0.532441C0.717829 0.122324 1.3829 0.122324 1.79321 0.532441L7.49996 6.23952L13.2067 0.53264C13.617 0.122524 14.282 0.122524 14.6921 0.53264C15.1026 0.942757 15.1026 1.60796 14.6921 2.01824L8.24254 8.46797C8.03749 8.67286 7.76869 8.77528 7.49996 8.77528Z" fill="black"/>
+                                </svg>                                
+                            </div>
+                            <div class="acc-body">
+                                <div class="choice_color_2">
+                                    <span style="background: #DCC8B2;"></span>
+                                    <span style="background: #B85A47;"></span>
+                                    <span style="background: #8F6B64;"></span>
+                                    <span style="background: #232323;"></span>
+                                    <span style="background: #B85A47;"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="acc_box">
+                            <div class="acc-head">
+                                <p>Область коррекции</p>
+                                <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7.49996 8.77528C7.23113 8.77528 6.96233 8.67263 6.75737 8.46777L0.307712 2.01804C-0.102571 1.60776 -0.102571 0.942558 0.307712 0.532441C0.717829 0.122324 1.3829 0.122324 1.79321 0.532441L7.49996 6.23952L13.2067 0.53264C13.617 0.122524 14.282 0.122524 14.6921 0.53264C15.1026 0.942757 15.1026 1.60796 14.6921 2.01824L8.24254 8.46797C8.03749 8.67286 7.76869 8.77528 7.49996 8.77528Z" fill="black"/>
+                                </svg>                                
+                            </div>
+                            <div class="acc-body">
+                                <div class="area_wrap">
+                                    <div class="area_item">
+                                        <img src="img/catalog/area.svg" alt="area">
+                                        <p>Белье</p>
+                                    </div>
+                                    <div class="area_item">
+                                        <img src="img/catalog/area.svg" alt="area">
+                                        <p>Корсеты</p>
+                                    </div>
+                                    <div class="area_item">
+                                        <img src="img/catalog/area.svg" alt="area">
+                                        <p>Белье</p>
+                                    </div>
+                                    <div class="area_item">
+                                        <img src="img/catalog/area.svg" alt="area">
+                                        <p>Корсеты</p>
+                                    </div>
+                                    <div class="area_item">
+                                        <img src="img/catalog/area.svg" alt="area">
+                                        <p>Белье</p>
+                                    </div>
+                                    <div class="area_item">
+                                        <img src="img/catalog/area.svg" alt="area">
+                                        <p>Корсеты</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="acc_box">
+                            <div class="acc-head">
+                                <p>Компрессия</p>
+                                <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7.49996 8.77528C7.23113 8.77528 6.96233 8.67263 6.75737 8.46777L0.307712 2.01804C-0.102571 1.60776 -0.102571 0.942558 0.307712 0.532441C0.717829 0.122324 1.3829 0.122324 1.79321 0.532441L7.49996 6.23952L13.2067 0.53264C13.617 0.122524 14.282 0.122524 14.6921 0.53264C15.1026 0.942757 15.1026 1.60796 14.6921 2.01824L8.24254 8.46797C8.03749 8.67286 7.76869 8.77528 7.49996 8.77528Z" fill="black"/>
+                                </svg>                                
+                            </div>
+                            <div class="acc-body">
+                                <div class="catalog_metka">
+                                    <a href="#">Низкая</a>
+                                    <a href="#">Средняя</a>
+                                    <a href="#">Сильная</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="acc_box">
+                            <div class="acc-head">
+                                <p>Отметки</p>
+                                <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7.49996 8.77528C7.23113 8.77528 6.96233 8.67263 6.75737 8.46777L0.307712 2.01804C-0.102571 1.60776 -0.102571 0.942558 0.307712 0.532441C0.717829 0.122324 1.3829 0.122324 1.79321 0.532441L7.49996 6.23952L13.2067 0.53264C13.617 0.122524 14.282 0.122524 14.6921 0.53264C15.1026 0.942757 15.1026 1.60796 14.6921 2.01824L8.24254 8.46797C8.03749 8.67286 7.76869 8.77528 7.49996 8.77528Z" fill="black"/>
+                                </svg>                                
+                            </div>
+                            <div class="acc-body">
+                                <div class="catalog_metka">
+                                    <a href="#">Хит</a>
+                                    <a href="#">Новинки</a>
+                                    <a href="#">Скидки</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="filter_details">Подробнее</a>
+                </div>
+            </div>
             <div class="home_img">
                 <img src="img/home/home.png" loading="lazy" alt="home_img">
             </div>
@@ -398,7 +528,15 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="add_other">Загрузить больше</a>
+                    <div class="add_other_wrap">
+                        <span class="progress">
+                            <span></span>
+                            <svg height="35" width="35">
+                              <circle cx="17.5" cy="17" r="12.5" stroke-width="5" fill="none" />
+                            </svg>
+                        </span>
+                        <a href="#" class="add_other">Загрузить больше</a>
+                    </div>
                 </div>
             </div>
             <div class="top_item padding">
