--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
         <div class="bg"></div>
         <header>
             <div class="container padding">
+                <div class="bug_header">
+                    <div class="bug_header_wrap">
+                        <p>Добавлено в корзину</p>
+                        <a href="#" class="close_bug">
+                            <img src="img/bug/close.svg" loading="lazy" alt="close">
+                        </a>
+                    </div>
+                    <div class="bug_item_wrap">
+                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">
+                        <div class="bug_item_info">
+                            <p class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                            <p class="bug_attr">Латексная Дышащая майка</p>
+                            <p class="bug_attr">Размер: XL</p>
+                            <p class="bug_attr">Цвет: бежевый</p>
+                            <p class="bug_price">6 990 руб <span>7550 руб</span></p>
+                        </div>
+                    </div>
+                    <div class="bug_bottom_wrap">
+                        <a href="#">Перейти в корзину (6)</a>
+                        <a href="#">Оформить заказ</a>
+                    </div>
+                </div>
                 <div class="header_wrap">
                     <div class="headr_left">
                         <img src="img/header/menu.svg" class="menu" loading="lazy" alt="menu">
@@ -32,9 +54,9 @@
                         <a href="#">
                             <img src="img/header/heart.svg" loading="lazy" alt="heart">
                         </a>
-                        <a href="#">
+                        <a href="#" class="bug_call">
                             <img src="img/header/bug.svg" loading="lazy" alt="bug">
-                            <span>0</span>
+                            <span>2</span>
                         </a>
                     </div>
                 </div>
