--- a/bug.html
+++ b/bug.html
@@ -7,7 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?v2">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
@@ -146,7 +146,7 @@
                                 </div>
                             </div>
                             <div class="bug_item_info">
-                                <p class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                                <a href="#" class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</a>
                                 <p class="bug_attr">Латексная Дышащая майка</p>
                                 <p class="bug_attr">Размер: 
                                     <select name="">
@@ -193,7 +193,7 @@
                                 </div>
                             </div>
                             <div class="bug_item_info">
-                                <p class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                                <a href="#" class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</a>
                                 <p class="bug_attr">Латексная Дышащая майка</p>
                                 <p class="bug_attr">Размер: 
                                     <select name="">
@@ -240,7 +240,7 @@
                                 </div>
                             </div>
                             <div class="bug_item_info">
-                                <p class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                                <a href="#" class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</a>
                                 <p class="bug_attr">Латексная Дышащая майка</p>
                                 <p class="bug_attr">Размер: 
                                     <select name="">
@@ -717,6 +717,129 @@
                             идеальный размер.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="item" class="zoom-anim-dialog item_modal mfp-hide">
+        <div class="item_modal_slider">
+            <div class="swiper-container item_slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" loading="lazy" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" loading="lazy" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" loading="lazy" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" loading="lazy" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" loading="lazy" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" loading="lazy" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" loading="lazy" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </div>
+        <p class="item_modal_title">Латексная дышащая майка Vest AIR с 6-ю рядами</p>
+        <div class="reviews_wrap">
+            <div class="star">
+                <img src="img/home/star.svg" loading="lazy" alt="star">
+                <img src="img/home/star.svg" loading="lazy" alt="star">
+                <img src="img/home/star.svg" loading="lazy" alt="star">
+                <img src="img/home/star.svg" loading="lazy" alt="star">
+                <img src="img/home/star.svg" loading="lazy" alt="star">
+            </div>
+            <a href="#">2573 отзывов</a>
+        </div>
+        <div class="choice_color">
+            <span style="background: #232323;"></span>
+            <span style="background: #DCC8B2;"></span>
+            <span style="background: #B29A7E;"></span>
+            <span style="background: #CFA97E;"></span>
+        </div>
+        <div class="size_top">
+            <p>Размерная сетка</p>
+            <p>Соответствует размеру <span>99%</span></p>
+        </div>
+        <div class="modal_size_wrap">
+            <div class="size_item">S</div>
+            <div class="size_item active">M</div>
+            <div class="size_item">L</div>
+            <div class="size_item">XL</div>
+            <div class="size_item disabled">2XL</div>
+            <div class="size_item disabled">3XL</div>
+            <div class="size_item">4XL</div>
+            <div class="size_item">5XL</div>
+        </div>
+        <a href="#" class="modal_size"><img src="img/modal/size.svg" loading="lazy" alt="size"> Калькулятор размера</a>
+        <p class="modal_price">6 990 руб</p>
+        <p class="warning">В данном размере остался 1 товар.<br> Поспешите!</p>
+        <div class="item_modal_btn">
+            <a href="#">Купить</a>
+            <div class="select">
+                <select name="">
+                    <option value="1">1</option>
+                    <option value="1">2</option>
+                    <option value="1">3</option>
+                    <option value="1">4</option>
+                </select>
+                <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.76525 7.632C6.55152 7.632 6.33782 7.5504 6.17487 7.38753L1.04725 2.25985C0.721066 1.93367 0.721066 1.40482 1.04725 1.07877C1.3733 0.752716 1.90205 0.752716 2.22826 1.07877L6.76525 5.61602L11.3023 1.07893C11.6284 0.752874 12.1571 0.752874 12.4832 1.07893C12.8095 1.40498 12.8095 1.93383 12.4832 2.26001L7.35562 7.38769C7.19259 7.55058 6.97889 7.632 6.76525 7.632Z" fill="black"/>
+                    </svg>                    
+            </div>
+        </div>
+        <div class="item_modal_bottom">
+            <div class="item_bottom">
+                <img src="img/modal/bot_1.svg" loading="lazy" alt="bot">
+                <p class="item_bottom_title">Гарантия производителя - 
+                    90 дней.</p>
+                <p class="item_bottom_text">Удобный обмен товара - 14 дней 
+                    с момента получение.</p>
+            </div>
+            <div class="item_bottom">
+                <img src="img/modal/bot_2.svg" loading="lazy" alt="bot">
+                <p class="item_bottom_title">Все еще остались вопросы?</p>
+                <p class="item_bottom_text">Все в порядке. Наш <a href="#">эксперт</a> поможет вам подобрать идеальный размер.</p>
             </div>
         </div>
     </div>
