--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?v2">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
@@ -27,7 +27,7 @@
                     <div class="bug_item_wrap">
                         <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">
                         <div class="bug_item_info">
-                            <p class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                            <a href="#" class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</a>
                             <p class="bug_attr">Латексная Дышащая майка</p>
                             <p class="bug_attr">Размер: XL</p>
                             <p class="bug_attr">Цвет: бежевый</p>
