--- a/bug.html
+++ b/bug.html
@@ -92,7 +92,7 @@
                             <img src="img/home/item_img.png" alt="item">
                             <div class="bug_order_info">
                                 <p class="sale">Экономия - 20%</p>
-                                <p class="title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                                <a href="#" class="title">Латексная Дышащая майка Vest AIR с 3-мя рядами</a>
                                 <p class="price">6 990 руб <span>7590 руб</span></p>
                                 <div class="choice_color">
                                     <span style="background: #232323;"></span>
