--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
     <a class="popup-with-zoom-anim thank_click" href="#thank"></a>
 
     <div id="thank" class="zoom-anim-dialog thank_modal mfp-hide">
-        <p class="thank_title">Благодарим!</p>
+        <p class="thank_title color_beg">Благодарим!</p>
         <p class="thank_text">Теперь ты первым будешь узнавать  обо всех наших новинках и эксклюзивных предложениях первым.</p>
     </div>
 
